--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin": { "nshey": "./sniffer.js"},
+  "bin": { "nshey": "./nshey.js"},
   "author": "Surya Mattu and Sam Lavigne",
   "license": "GPL",
   "repository" :{
