--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sniff out the wireless network names nearby devices have connected to",
   "main": "sniffer.js",
   "dependencies": {
-    "network": "~0.0.9"
+    "network": "~0.0.9",
+    "nomnom": "1.8.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
